--- a/httpd.conf
+++ b/httpd.conf
@@ -1,8 +1,8 @@
 Alias /themes/charisma /usr/share/htmlgrid-charisma
 
 <Directory /usr/share/htmlgrid-charisma>
-	<IfModule mod_access.c>
-		Allow from all
+	<IfModule mod_authz_host.c>
+		Require all granted
 	</IfModule>
 	Options +FollowSymLinks
 </Directory>
