--- a/apache.conf
+++ b/apache.conf
@@ -1,7 +1,11 @@
 Alias /themes/charisma /usr/share/htmlgrid-charisma
-
 <Directory /usr/share/htmlgrid-charisma>
+	# Apache 1.3 / 2.0
 	<IfModule mod_access.c>
+		Allow from all
+	</IfModule>
+	# Apache 2.2+
+	<IfModule mod_authz_host.c>
 		Allow from all
 	</IfModule>
 	Options +FollowSymLinks
