--- a/apache.conf
+++ b/apache.conf
@@ -4,9 +4,15 @@ Alias /themes/charisma /usr/share/htmlgrid-charisma
 	<IfModule mod_access.c>
 		Allow from all
 	</IfModule>
-	# Apache 2.2+
+	# Apache 2.2
+	<IfModule !mod_authz_core.c>
 	<IfModule mod_authz_host.c>
 		Allow from all
+	</IfModule>
+	</IfModule>
+	# Apache 2.4
+	<IfModule mod_authz_core.c>
+		Require all granted
 	</IfModule>
 	Options +FollowSymLinks
 </Directory>
